<resources>
    <string name="app_name">EzCode</string>
    <string name="regiater_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="languageBtn">العربية</string>
    <string name="top_ten">TOP 10</string>
    <string name="java">JAVA</string>
    <string name="js">JS</string>
    <string name="all">ALL</string>
    <string name="python">PYTHON</string>
    <string name="username">Username</string>
    <string name="points">Points</string>
    <string name="place">Place</string>
    <string name="enter_full_name">ex: Omar Mohammed</string>
    <string name="full_name">Full name:</string>
    <string name="email">Email:</string>
    <string name="enter_username">ex: OmarBash</string>
    <string name="enter_emai">ex: omarbash@example.com</string>
    <string name="birthday">Birthday:</string>
    <string name="enter_age">ex: mm/dd/yyyy</string>
    <string name="edu_lvl">Education level:</string>
    <string name="select_lvl">Select level</string>

    <string-array name="edu_list">
        <item>Less than secondary</item>
        <item>Secondary</item>
        <item>Intermediate diploma</item>
        <item>Bachelor and Above</item>
    </string-array>

    <string-array name="country_list">
        <item>Saudi Arabia</item>
        <item>Yemen</item>
        <item>Tunisia</item>
        <item>Egypt</item>
        <item>Sudan</item>
        <item>Somalia</item>
        <item>Algeria</item>
        <item>Morocco</item>
        <item>Iraq</item>
        <item>Syria</item>
        <item>Libya</item>
        <item>Jordan</item>
        <item>Emirates</item>
        <item>Lebanon</item>
        <item>Mauritania</item>
        <item>Kuwait</item>
        <item>Oman</item>
        <item>Qatar</item>
        <item>Jubbuti</item>
        <item>Bahrain</item>
        <item>Union of Comoros</item>
        <item>Palestine</item>
        <item>Other</item>
    </string-array>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="select_country">Country:</string>
    <string name="select_gender">Gender:</string>
    <string name="password">Password:</string>
    <string name="re_password">Re-password:</string>
    <string name="password_example">ex: Aa123</string>
    <string name="have_account">Already have an account?</string>
    <string name="terms_and_conditions">When you create an account, you accept the Terms and Conditions.</string>
    <string name="username_">Username:</string>
    <string name="conditions">About the terms of sale of potential customer data</string>
    <string name="terms">About the privacy policies of prospective customer advertising</string>
    <string name="conditions_info">To run lead ads on Facebook or Instagram, you must review and accept the lead ads terms. If you run lead ads across multiple Facebook Pages, you must accept the lead ads terms for each page. If you choose to use personalized questions in your instant form, you must also follow these advertising policies.  For more information about security, see the Frequently Asked Questions below.  Will other advertisers receive my lead ad data?  No, your lead ad data will only be made available to you until an administrator of your Page accesses it. Users can, of course, choose to share the same or similar information through different lead generation ads generated by other advertisers. In accordance with its data policy, Facebook will also use the information that users send through an advertisement to collect lead customer data.  Where is my lead ad data stored?  Lead generation ad data is stored on Facebook\'s servers. Facebook operates large, distributed computing systems, where information is stored in many places at once. We have data centers in different geographies, each of which stores copies of the information in Facebook\'s databases.  This distributed model helps us provide access to Facebook without long delays. The model also provides a back-up system to ensure that Facebook continues to function even if a data center receives an unexpectedly large amount of traffic, a network problem occurs, or becomes unavailable for any other reason. We also store emergency backups of your Facebook data in multiple locations to protect against data loss. We invest huge sums in technologies, processes, and teams with security-only staff to ensure the security of our production data centers.  Who is the owner of lead generation ad data?  Individuals provide lead ad data to Facebook and give us permission to share the data with a specific advertiser. Facebook may use lead generation ad data in accordance with its data policy, and the advertiser is permitted to use data shared with it in accordance with its privacy policy, as well as other associated terms disclosed in the ad.  What does Facebook do with lead generation ad data?  Facebook may use lead generation advertising data as permitted by its data policy, including the right to pre-fill future instant forms that individuals may complete. Facebook does not use data obtained from personalized questions asked by the advertiser.  Under the General Data Protection Regulation (GDPR), is Facebook the data controller or the data processor for lead generation ads?  In the case of lead generation ads, both Facebook and the advertiser act as data controllers. As a result, each party is responsible for ensuring compliance by providing notice and establishing a legal basis for processing the data provided by the person using our Platform. The lead-account advertising product provides advertisers with the option to create a link to their privacy policies and terms regarding the collection and use of personal data.  Is my Facebook advertising account secure?  Facebook makes every effort to use the latest technology to protect customer accounts. To provide greater security for your ad account, we provide optional security technologies for free, such as login approvals, which is a method of \"two-factor authentication\".  Does Facebook have processes to address security incidents?  Facebook has a detailed process for handling any security incidents, including a full internal assessment of any incident.</string>
    <string name="terms_info">A privacy policy is required to run lead generation ads on Facebook or Instagram. A privacy policy tells people what you will do with their information, and can be useful for building trust with your potential and existing customers, who are more likely to share information with you based on the information described in your policy. Therefore, it is important that the Privacy Policy is accurate and not misleading.  Some of the topics to be considered in the Privacy Policy include:  What types of information do you collect? How do you use this information? Do you share this information with any affiliates or third parties? Can customers review or delete the information you collect about them? How do you respond to legal requests? How do you notify your customers when there is a change in privacy practices? How do your customers communicate with you about any questions they have? What is the effective date of the privacy policy? Consider posting the Privacy Policy in a place where it is easy for users to find it, such as the footer of the website or the settings menu of the mobile app. You should also check your local laws to see if you should post the Privacy Policy in a particular location or in a particular way.  When you create an instant lead form, you will be prompted to add a link to the Privacy Policy in the Privacy section. The Privacy Policy cannot be linked directly to a PDF, image or direct download.  Learn more About lead generation ads About the terms and security of lead generation ads Lead Generation Ads Recommendations and Requirements</string>
    <string name="dont_have_account">No account? Create one!</string>
    <string name="forget_password">Forget password?</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="challenges">Challenges</string>
    <string name="articles">Articles</string>
    <string name="more">More</string>
    <string name="welcome">Welcome,</string>
    <string name="hello">Hello,</string>
    <string name="home_points">Points:</string>
    <string name="see_all">See all</string>
    <string name="challenges_title_xml">Challenges</string>
    <string name="solve_challenges">Solve challenges</string>
    <string name="add_comment">Add coment ..</string>
    <string name="add_article">Add article</string>
    <string name="article_title">Article title</string>
    <string name="account">Account</string>
    <string name="rank">Rank</string>
    <string name="stats">Stats</string>
    <string name="signout">Sign out</string>
    <string name="my_articles">My articles</string>
    <string name="loading">Loading ...</string>
    <string name="update_info">Update your info</string>
    <string name="account_confirm">Note: You should keep in mind that (educational level, gender, country) may have been reset. After that you can update your profile.</string>
    <string name="logout">Are you sure you want to log out?</string>
    <string name="delete_my_article">Delete</string>
    <string name="edit_my_article">Edit</string>
    <string name="send">Send</string>
    <string name="write_answer">Write your answer</string>
    <string name="delete_my_account">Delete Account</string>
    <string name="change_password">Change Password</string>

</resources>