<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_ten_background"
    android:orientation="vertical"
    tools:context=".TopTenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backBtnTopTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/back_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="289dp"
            android:layout_height="41dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/coustom_top_bar"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/javaBtnInTopBar"
                android:layout_width="72.25dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/java"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pythonBtnInTopBar"
                android:layout_width="72.25dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/python"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/jsBtnInTopBar"
                android:layout_width="72.25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/js"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/allBtnInTopBar"
                android:layout_width="72.25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="289dp"
            android:layout_height="41dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/info_users_bar"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/place"
                android:textColor="@color/purple_200"
                android:textSize="16sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/purple_200"
                android:textSize="16sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/points"
                android:textColor="@color/purple_200"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="289dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/placesListTopTen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>