<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/back_btn_light" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="50dp"
                android:paddingBottom="50dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/username_"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/login_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/empty_field"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/dark_blue"
                    android:textColorHint="@color/dark_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/password"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/empty_field"
                        android:gravity="center_vertical"
                        android:hint="@string/password_example"
                        android:inputType="textVisiblePassword"
                        android:maxLength="16"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/dark_blue"
                        android:textColorHint="@color/dark_blue"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_btn"
                    android:gravity="center"
                    android:text="@string/login_btn"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/forget_password"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/dontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:minWidth="200dp"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>