<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerBtnMainPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_small_btn"
                android:text="@string/regiater_btn"
                android:textSize="16sp" />

            <Space
                android:id="@+id/space"
                android:layout_width="20dp"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/loginBtnMainPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_small_btn"
                android:text="@string/login_btn"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/topTenBtnMainPage"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_btn"
                android:gravity="center"
                android:text="@string/top_ten"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/changeLanguageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_small_btn"
                android:text="@string/languageBtn"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>